--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Rocket Coffee</h1>
+    <h1>Rocket <span>Coffee</span></h1>
     <p>Aberto todos os dias: 08h - 21h.</p>
   </header>
   <section>
@@ -50,6 +50,48 @@
         </div>
         <strong class="price">
           R$ 37,70
+        </strong>
+      </li>
+    </ul>
+  </section>
+  <section>
+    <h2>Bebidas</h2>
+
+    <ul>
+      <li>
+        <div class="details">
+          <h3>
+            Vinho
+          </h3>
+          <p class="description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <strong class="price">
+          R$ 37,70
+        </strong>
+      </li>
+      <li>
+        <div class="details">
+          <h3>
+            Agua com gás
+          </h3>
+          <p class="description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <strong class="price">
+          R$ 17,70
+        </strong>
+      </li>
+      <li>
+        <div class="details">
+          <h3>
+            Suco Natural
+          </h3>
+          <p class="description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <strong class="price">
+          R$ 17,70
         </strong>
       </li>
     </ul>
